manifests/price-monitoring/overlays/integration/patches/backend-batch-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-1-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend-batch-1
          command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq/crawl_process.yml", "-e", "integration"]
          resources:
            limits:
              cpu: "300m"
