manifests/price-monitoring/overlays/integration/patches/backend-batch-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-2-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend-batch-2
          command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq/general_process.yml", "-e", "integration"]
