manifests/price-monitoring/overlays/integration/patches/backend-playwright.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-playwright-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: backend-playwright
          resources:
            limits:
              cpu: "700m"
              memory: "500Mi"
