manifests/price-monitoring/overlays/integration/patches/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  loadBalancerIP: 10.15.100.227
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    spec:
      containers:
        - name: frontend
          resources:
            limits:
              cpu: "200m"
              memory: "300Mi"
